# anime-ost

./: Dockerfile  entrypoint.sh  nginx-anime-ost.conf
api/: .gitignore  Cargo.toml  config.yaml.example
api/src/: config.rs  error.rs  main.rs
api/src/common/: error.rs  result.rs
api/src/db/: db_calls.rs  db_init.rs  mod.rs  sqlite_statements.rs
api/src/models/: mod.rs
api/src/proxer/: html.rs  mod.rs  proxer_client.rs
api/src/server/: mod.rs  user.rs
api/src/server/routes/: anime_route.rs  mod.rs  ost_route.rs  proxer_route.rs  useranime_route.rs  users_route.rs
webapp/: angular.json  package-lock.json  package.json
webapp/src/: index.html
webapp/src/app/: app.component.html  app.component.ts  app.module.ts
webapp/src/app/anime-ost-list/: anime-ost-list.component.html  anime-ost-list.component.spec.ts  anime-ost-list.component.ts
webapp/src/app/anime-ost-list/anime-ost-table/: anime-ost-table.component.css  anime-ost-table.component.html  anime-ost-table.component.spec.ts  anime-ost-table.component.ts
webapp/src/app/anime-ost-list/anime-ost-table/anime-ost-entry/: anime-ost-entry.component.css  anime-ost-entry.component.html  anime-ost-entry.component.spec.ts  (+1 more)
webapp/src/app/anime-ost-modal/: anime-ost-modal.component.css  anime-ost-modal.component.html  anime-ost-modal.component.spec.ts  anime-ost-modal.component.ts
webapp/src/app/models/: anime-row.ts  anime.ts  ost.ts  response.ts  user.ts  useranime.ts
webapp/src/app/services/: anime.service.ts  modal.service.ts  ost.service.spec.ts  ost.service.ts  user.service.ts
(+4 files in other folders)
