[package]
name = "anime-ost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.8" }
directories = "5.0.0"
figment = { version = "0.10.8", features = ["yaml"]}
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "cookies"] }
rocket = "0.5.0-rc.2"
rusqlite = "0.28.0"
select = "0.6.0"
serde = "1.0.157"
serde_derive = "1.0.157"
serde_json = "1.0.94"
thiserror = { version = "1.0.39" }
tokio = { version = "1.26.0", features = ["full"] }